// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`list Should allow indented codeblock inside 1`] = `
[
  {
    "indent": 0,
    "raw": "To put a code block within a list item, the code block needs
to be indented *twice* -- 8 spaces or two tabs:",
    "tokens": [
      {
        "raw": "To put a code block within a list item, the code block needs to be indented ",
        "type": "text",
        "value": "To put a code block within a list item, the code block needs to be indented ",
      },
      {
        "raw": "*twice*",
        "tokens": [
          {
            "raw": "twice",
            "type": "text",
            "value": "twice",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " -- 8 spaces or two tabs:",
        "type": "text",
        "value": " -- 8 spaces or two tabs:",
      },
    ],
    "type": "paragraph",
    "value": "To put a code block within a list item, the code block needs to be indented *twice* -- 8 spaces or two tabs:",
  },
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "*   A list item with a code block:

        <code goes here>",
        "tokens": [
          {
            "indent": 0,
            "raw": "A list item with a code block:",
            "tokens": [
              {
                "raw": "A list item with a code block:",
                "type": "text",
                "value": "A list item with a code block:",
              },
            ],
            "type": "paragraph",
            "value": "A list item with a code block:",
          },
          {
            "type": "new-line",
          },
          {
            "indent": 8,
            "language": null,
            "raw": "        <code goes here>",
            "type": "code-block",
            "value": "<code goes here>",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "*",
      "ordered": false,
    },
    "raw": "*   A list item with a code block:

        <code goes here>",
    "type": "list",
  },
  {
    "type": "new-line",
  },
  {
    "indent": 0,
    "level": 3,
    "raw": "### Code Blocks",
    "setext": false,
    "tokens": [
      {
        "raw": "Code Blocks",
        "type": "text",
        "value": "Code Blocks",
      },
    ],
    "type": "heading",
    "value": "Code Blocks",
  },
]
`;

exports[`list less than 4 indent should not break the list 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "  - item **1**",
        "tokens": [
          {
            "indent": 0,
            "raw": "item **1**",
            "tokens": [
              {
                "raw": "item ",
                "type": "text",
                "value": "item ",
              },
              {
                "raw": "**1**",
                "tokens": [
                  {
                    "raw": "1",
                    "type": "text",
                    "value": "1",
                  },
                ],
                "type": "bold",
              },
            ],
            "type": "paragraph",
            "value": "item **1**",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "  - item [link](link-url)",
        "tokens": [
          {
            "indent": 0,
            "raw": "item [link](link-url)",
            "tokens": [
              {
                "raw": "item ",
                "type": "text",
                "value": "item ",
              },
              {
                "raw": "[link](link-url)",
                "tokens": {
                  "href": "link-url",
                  "title": {
                    "raw": "link",
                    "tokens": [
                      {
                        "raw": "link",
                        "type": "text",
                        "value": "link",
                      },
                    ],
                  },
                  "tooltip": undefined,
                },
                "type": "link",
              },
            ],
            "type": "paragraph",
            "value": "item [link](link-url)",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- item 3 \`code item\`",
        "tokens": [
          {
            "indent": 0,
            "raw": "item 3 \`code item\`",
            "tokens": [
              {
                "raw": "item 3 ",
                "type": "text",
                "value": "item 3 ",
              },
              {
                "raw": "\`code item\`",
                "type": "code",
                "value": "code item",
              },
            ],
            "type": "paragraph",
            "value": "item 3 \`code item\`",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- item 4",
        "tokens": [
          {
            "indent": 0,
            "raw": "item 4",
            "tokens": [
              {
                "raw": "item 4",
                "type": "text",
                "value": "item 4",
              },
            ],
            "type": "paragraph",
            "value": "item 4",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "  - item **1**
  - item [link](link-url)
- item 3 \`code item\`
- item 4",
    "type": "list",
  },
]
`;

exports[`list should allow lazy lexing 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": true,
        "count": null,
        "raw": "- [x] list *item* one
omg this is merged with the above line",
        "tokens": [
          {
            "indent": 0,
            "raw": "list *item* one
omg this is merged with the above line",
            "tokens": [
              {
                "raw": "list ",
                "type": "text",
                "value": "list ",
              },
              {
                "raw": "*item*",
                "tokens": [
                  {
                    "raw": "item",
                    "type": "text",
                    "value": "item",
                  },
                ],
                "type": "italic",
              },
              {
                "raw": " one omg this is merged with the above line",
                "type": "text",
                "value": " one omg this is merged with the above line",
              },
            ],
            "type": "paragraph",
            "value": "list *item* one omg this is merged with the above line",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": true,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- [x] list *item* one
omg this is merged with the above line",
    "type": "list",
  },
]
`;

exports[`list should allow lazy unless there is two line separator 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "- one
            two
three

	   \`\`\`
	   here
	   four
	   \`\`\`",
        "tokens": [
          {
            "indent": 0,
            "raw": "one
            two
three",
            "tokens": [
              {
                "raw": "one             two three",
                "type": "text",
                "value": "one             two three",
              },
            ],
            "type": "paragraph",
            "value": "one             two three",
          },
          {
            "type": "new-line",
          },
          {
            "indent": 4,
            "language": null,
            "raw": "	   \`\`\`
	   here
	   four
	   \`\`\`",
            "type": "code-block",
            "value": "here
four",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": [
          {
            "indent": 0,
            "raw": "two",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- three",
        "tokens": [
          {
            "indent": 0,
            "raw": "three",
            "tokens": [
              {
                "raw": "three",
                "type": "text",
                "value": "three",
              },
            ],
            "type": "paragraph",
            "value": "three",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- one
            two
three

	   \`\`\`
	   here
	   four
	   \`\`\`
- two
- three",
    "type": "list",
  },
]
`;

exports[`list should cope with tabbed indentations 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": "3",
        "raw": "3.  Is a blank line needed before an indented code block?
		(\`Markdown.pl\` requires it, but this is not mentioned in the
		documentation, and some implementations do not require it.)

		\`\`\` markdown
		paragraph
				code?
		\`\`\`",
        "tokens": [
          {
            "indent": 0,
            "raw": "Is a blank line needed before an indented code block?
		(\`Markdown.pl\` requires it, but this is not mentioned in the
		documentation, and some implementations do not require it.)",
            "tokens": [
              {
                "raw": "Is a blank line needed before an indented code block? 		(",
                "type": "text",
                "value": "Is a blank line needed before an indented code block? 		(",
              },
              {
                "raw": "\`Markdown.pl\`",
                "type": "code",
                "value": "Markdown.pl",
              },
              {
                "raw": " requires it, but this is not mentioned in the 		documentation, and some implementations do not require it.)",
                "type": "text",
                "value": " requires it, but this is not mentioned in the 		documentation, and some implementations do not require it.)",
              },
            ],
            "type": "paragraph",
            "value": "Is a blank line needed before an indented code block? 		(\`Markdown.pl\` requires it, but this is not mentioned in the 		documentation, and some implementations do not require it.)",
          },
          {
            "type": "new-line",
          },
          {
            "indent": 8,
            "language": "markdown",
            "raw": "		\`\`\` markdown
		paragraph
				code?
		\`\`\`",
            "type": "code-block",
            "value": "paragraph
		code?",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": "5",
        "raw": "5.  Can list markers be indented?  Can ordered list markers be right-aligned?

		\`\`\` markdown
		 8. item 1
		 9. item 2
		10. item 2a
		\`\`\`",
        "tokens": [
          {
            "indent": 0,
            "raw": "Can list markers be indented?  Can ordered list markers be right-aligned?",
            "tokens": [
              {
                "raw": "Can list markers be indented?  Can ordered list markers be right-aligned?",
                "type": "text",
                "value": "Can list markers be indented?  Can ordered list markers be right-aligned?",
              },
            ],
            "type": "paragraph",
            "value": "Can list markers be indented?  Can ordered list markers be right-aligned?",
          },
          {
            "type": "new-line",
          },
          {
            "indent": 8,
            "language": "markdown",
            "raw": "		\`\`\` markdown
		 8. item 1
		 9. item 2
		10. item 2a
		\`\`\`",
            "type": "code-block",
            "value": " 8. item 1
 9. item 2
10. item 2a",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": null,
      "ordered": true,
    },
    "raw": "3.  Is a blank line needed before an indented code block?
		(\`Markdown.pl\` requires it, but this is not mentioned in the
		documentation, and some implementations do not require it.)

		\`\`\` markdown
		paragraph
				code?
		\`\`\`
5.  Can list markers be indented?  Can ordered list markers be right-aligned?

		\`\`\` markdown
		 8. item 1
		 9. item 2
		10. item 2a
		\`\`\`",
    "type": "list",
  },
  {
    "type": "new-line",
  },
  {
    "indent": 0,
    "raw": "This is a paragraph.",
    "tokens": [
      {
        "raw": "This is a paragraph.",
        "type": "text",
        "value": "This is a paragraph.",
      },
    ],
    "type": "paragraph",
    "value": "This is a paragraph.",
  },
  {
    "type": "new-line",
  },
]
`;

exports[`list should find closing ends in the next lines 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": "2",
        "raw": "2.  **Start condition:** line begins with the string \`<!--\`.\\
**End condition:**  line contains the string \`-->\`.",
        "tokens": [
          {
            "indent": 0,
            "raw": "**Start condition:** line begins with the string \`<!--\`.\\
**End condition:**  line contains the string \`-->\`.",
            "tokens": [
              {
                "raw": "**Start condition:**",
                "tokens": [
                  {
                    "raw": "Start condition:",
                    "type": "text",
                    "value": "Start condition:",
                  },
                ],
                "type": "bold",
              },
              {
                "raw": " line begins with the string ",
                "type": "text",
                "value": " line begins with the string ",
              },
              {
                "raw": "\`<!--\`",
                "type": "code",
                "value": "<!--",
              },
              {
                "raw": ".\\ ",
                "type": "text",
                "value": ".\\ ",
              },
              {
                "raw": "**End condition:**",
                "tokens": [
                  {
                    "raw": "End condition:",
                    "type": "text",
                    "value": "End condition:",
                  },
                ],
                "type": "bold",
              },
              {
                "raw": "  line contains the string ",
                "type": "text",
                "value": "  line contains the string ",
              },
              {
                "raw": "\`-->\`",
                "type": "code",
                "value": "-->",
              },
              {
                "raw": ".",
                "type": "text",
                "value": ".",
              },
            ],
            "type": "paragraph",
            "value": "**Start condition:** line begins with the string \`<!--\`.\\ **End condition:**  line contains the string \`-->\`.",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": null,
      "ordered": true,
    },
    "raw": "2.  **Start condition:** line begins with the string \`<!--\`.\\
**End condition:**  line contains the string \`-->\`.",
    "type": "list",
  },
]
`;

exports[`list should tokenize a li inside ol 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": "1",
        "raw": "1. **Real-Time Chat Applications**
	- Instant message delivery
	- Typing indicators
	- Online/offline status
	- Examples: Slack, Discord, WhatsApp Web",
        "tokens": [
          {
            "indent": 0,
            "raw": "**Real-Time Chat Applications**",
            "tokens": [
              {
                "raw": "**Real-Time Chat Applications**",
                "tokens": [
                  {
                    "raw": "Real-Time Chat Applications",
                    "type": "text",
                    "value": "Real-Time Chat Applications",
                  },
                ],
                "type": "bold",
              },
            ],
            "type": "paragraph",
            "value": "**Real-Time Chat Applications**",
          },
          {
            "indent": 4,
            "items": [
              {
                "checked": null,
                "count": null,
                "raw": "	- Instant message delivery",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "Instant message delivery",
                    "tokens": [
                      {
                        "raw": "Instant message delivery",
                        "type": "text",
                        "value": "Instant message delivery",
                      },
                    ],
                    "type": "paragraph",
                    "value": "Instant message delivery",
                  },
                ],
                "type": "list-item",
              },
              {
                "checked": null,
                "count": null,
                "raw": "	- Typing indicators",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "Typing indicators",
                    "tokens": [
                      {
                        "raw": "Typing indicators",
                        "type": "text",
                        "value": "Typing indicators",
                      },
                    ],
                    "type": "paragraph",
                    "value": "Typing indicators",
                  },
                ],
                "type": "list-item",
              },
              {
                "checked": null,
                "count": null,
                "raw": "	- Online/offline status",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "Online/offline status",
                    "tokens": [
                      {
                        "raw": "Online/offline status",
                        "type": "text",
                        "value": "Online/offline status",
                      },
                    ],
                    "type": "paragraph",
                    "value": "Online/offline status",
                  },
                ],
                "type": "list-item",
              },
              {
                "checked": null,
                "count": null,
                "raw": "	- Examples: Slack, Discord, WhatsApp Web",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "Examples: Slack, Discord, WhatsApp Web",
                    "tokens": [
                      {
                        "raw": "Examples: Slack, Discord, WhatsApp Web",
                        "type": "text",
                        "value": "Examples: Slack, Discord, WhatsApp Web",
                      },
                    ],
                    "type": "paragraph",
                    "value": "Examples: Slack, Discord, WhatsApp Web",
                  },
                ],
                "type": "list-item",
              },
            ],
            "meta": {
              "checklist": false,
              "identifier": "-",
              "ordered": false,
            },
            "raw": "	- Instant message delivery
	- Typing indicators
	- Online/offline status
	- Examples: Slack, Discord, WhatsApp Web",
            "type": "list",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": "2",
        "raw": "2. **Live Data Feeds**
	- Stock market tickers
	- Sports scores
	- News feeds
	- Social media updates",
        "tokens": [
          {
            "indent": 0,
            "raw": "**Live Data Feeds**",
            "tokens": [
              {
                "raw": "**Live Data Feeds**",
                "tokens": [
                  {
                    "raw": "Live Data Feeds",
                    "type": "text",
                    "value": "Live Data Feeds",
                  },
                ],
                "type": "bold",
              },
            ],
            "type": "paragraph",
            "value": "**Live Data Feeds**",
          },
          {
            "indent": 4,
            "items": [
              {
                "checked": null,
                "count": null,
                "raw": "	- Stock market tickers",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "Stock market tickers",
                    "tokens": [
                      {
                        "raw": "Stock market tickers",
                        "type": "text",
                        "value": "Stock market tickers",
                      },
                    ],
                    "type": "paragraph",
                    "value": "Stock market tickers",
                  },
                ],
                "type": "list-item",
              },
              {
                "checked": null,
                "count": null,
                "raw": "	- Sports scores",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "Sports scores",
                    "tokens": [
                      {
                        "raw": "Sports scores",
                        "type": "text",
                        "value": "Sports scores",
                      },
                    ],
                    "type": "paragraph",
                    "value": "Sports scores",
                  },
                ],
                "type": "list-item",
              },
              {
                "checked": null,
                "count": null,
                "raw": "	- News feeds",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "News feeds",
                    "tokens": [
                      {
                        "raw": "News feeds",
                        "type": "text",
                        "value": "News feeds",
                      },
                    ],
                    "type": "paragraph",
                    "value": "News feeds",
                  },
                ],
                "type": "list-item",
              },
              {
                "checked": null,
                "count": null,
                "raw": "	- Social media updates",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "Social media updates",
                    "tokens": [
                      {
                        "raw": "Social media updates",
                        "type": "text",
                        "value": "Social media updates",
                      },
                    ],
                    "type": "paragraph",
                    "value": "Social media updates",
                  },
                ],
                "type": "list-item",
              },
            ],
            "meta": {
              "checklist": false,
              "identifier": "-",
              "ordered": false,
            },
            "raw": "	- Stock market tickers
	- Sports scores
	- News feeds
	- Social media updates",
            "type": "list",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": null,
      "ordered": true,
    },
    "raw": "1. **Real-Time Chat Applications**
	- Instant message delivery
	- Typing indicators
	- Online/offline status
	- Examples: Slack, Discord, WhatsApp Web
2. **Live Data Feeds**
	- Stock market tickers
	- Sports scores
	- News feeds
	- Social media updates",
    "type": "list",
  },
  {
    "type": "new-line",
  },
]
`;

exports[`list should tokenize a list with variable spaces beforehand 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "  - item **1**",
        "tokens": [
          {
            "indent": 0,
            "raw": "item **1**",
            "tokens": [
              {
                "raw": "item ",
                "type": "text",
                "value": "item ",
              },
              {
                "raw": "**1**",
                "tokens": [
                  {
                    "raw": "1",
                    "type": "text",
                    "value": "1",
                  },
                ],
                "type": "bold",
              },
            ],
            "type": "paragraph",
            "value": "item **1**",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "  - one",
        "tokens": [
          {
            "indent": 0,
            "raw": "one",
            "tokens": [
              {
                "raw": "one",
                "type": "text",
                "value": "one",
              },
            ],
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": [
          {
            "indent": 0,
            "raw": "two",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- three",
        "tokens": [
          {
            "indent": 0,
            "raw": "three",
            "tokens": [
              {
                "raw": "three",
                "type": "text",
                "value": "three",
              },
            ],
            "type": "paragraph",
            "value": "three",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "  - item **1**
  - one
- two
- three",
    "type": "list",
  },
  {
    "type": "new-line",
  },
]
`;

exports[`list should tokenize a valid ordered list 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": "1",
        "raw": "1. item **1**",
        "tokens": [
          {
            "indent": 0,
            "raw": "item **1**",
            "tokens": [
              {
                "raw": "item ",
                "type": "text",
                "value": "item ",
              },
              {
                "raw": "**1**",
                "tokens": [
                  {
                    "raw": "1",
                    "type": "text",
                    "value": "1",
                  },
                ],
                "type": "bold",
              },
            ],
            "type": "paragraph",
            "value": "item **1**",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": "1",
        "raw": "1. item [link](link-url)",
        "tokens": [
          {
            "indent": 0,
            "raw": "item [link](link-url)",
            "tokens": [
              {
                "raw": "item ",
                "type": "text",
                "value": "item ",
              },
              {
                "raw": "[link](link-url)",
                "tokens": {
                  "href": "link-url",
                  "title": {
                    "raw": "link",
                    "tokens": [
                      {
                        "raw": "link",
                        "type": "text",
                        "value": "link",
                      },
                    ],
                  },
                  "tooltip": undefined,
                },
                "type": "link",
              },
            ],
            "type": "paragraph",
            "value": "item [link](link-url)",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": "1",
        "raw": "1. item 3 \`code item\`",
        "tokens": [
          {
            "indent": 0,
            "raw": "item 3 \`code item\`",
            "tokens": [
              {
                "raw": "item 3 ",
                "type": "text",
                "value": "item 3 ",
              },
              {
                "raw": "\`code item\`",
                "type": "code",
                "value": "code item",
              },
            ],
            "type": "paragraph",
            "value": "item 3 \`code item\`",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": null,
      "ordered": true,
    },
    "raw": "1. item **1**
1. item [link](link-url)
1. item 3 \`code item\`",
    "type": "list",
  },
]
`;

exports[`list should tokenize a valid un-ordered list 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "- item **1**",
        "tokens": [
          {
            "indent": 0,
            "raw": "item **1**",
            "tokens": [
              {
                "raw": "item ",
                "type": "text",
                "value": "item ",
              },
              {
                "raw": "**1**",
                "tokens": [
                  {
                    "raw": "1",
                    "type": "text",
                    "value": "1",
                  },
                ],
                "type": "bold",
              },
            ],
            "type": "paragraph",
            "value": "item **1**",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- item [link](link-url)",
        "tokens": [
          {
            "indent": 0,
            "raw": "item [link](link-url)",
            "tokens": [
              {
                "raw": "item ",
                "type": "text",
                "value": "item ",
              },
              {
                "raw": "[link](link-url)",
                "tokens": {
                  "href": "link-url",
                  "title": {
                    "raw": "link",
                    "tokens": [
                      {
                        "raw": "link",
                        "type": "text",
                        "value": "link",
                      },
                    ],
                  },
                  "tooltip": undefined,
                },
                "type": "link",
              },
            ],
            "type": "paragraph",
            "value": "item [link](link-url)",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- item 3 \`code item\`",
        "tokens": [
          {
            "indent": 0,
            "raw": "item 3 \`code item\`",
            "tokens": [
              {
                "raw": "item 3 ",
                "type": "text",
                "value": "item 3 ",
              },
              {
                "raw": "\`code item\`",
                "type": "code",
                "value": "code item",
              },
            ],
            "type": "paragraph",
            "value": "item 3 \`code item\`",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- item **1**
- item [link](link-url)
- item 3 \`code item\`",
    "type": "list",
  },
]
`;

exports[`list should tokenize an empty list item 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "- one",
        "tokens": [
          {
            "indent": 0,
            "raw": "one",
            "tokens": [
              {
                "raw": "one",
                "type": "text",
                "value": "one",
              },
            ],
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "-",
        "tokens": [],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": [
          {
            "indent": 0,
            "raw": "two",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- one
-
- two",
    "type": "list",
  },
]
`;

exports[`list should tokenize an empty list item 2`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "-",
        "tokens": [],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- one",
        "tokens": [
          {
            "indent": 0,
            "raw": "one",
            "tokens": [
              {
                "raw": "one",
                "type": "text",
                "value": "one",
              },
            ],
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": [
          {
            "indent": 0,
            "raw": "two",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "-
- one
- two",
    "type": "list",
  },
]
`;

exports[`list should tokenize an empty list item 3`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "- one",
        "tokens": [
          {
            "indent": 0,
            "raw": "one",
            "tokens": [
              {
                "raw": "one",
                "type": "text",
                "value": "one",
              },
            ],
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- two",
        "tokens": [
          {
            "indent": 0,
            "raw": "two",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "paragraph",
            "value": "two",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "-",
        "tokens": [],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- one
- two
-",
    "type": "list",
  },
]
`;

exports[`list should tokenize list combination 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "- one",
        "tokens": [
          {
            "indent": 0,
            "raw": "one",
            "tokens": [
              {
                "raw": "one",
                "type": "text",
                "value": "one",
              },
            ],
            "type": "paragraph",
            "value": "one",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- two
1. one
2. two",
        "tokens": [
          {
            "indent": 0,
            "raw": "two",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "paragraph",
            "value": "two",
          },
          {
            "indent": 0,
            "items": [
              {
                "checked": null,
                "count": "1",
                "raw": "1. one",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "one",
                    "tokens": [
                      {
                        "raw": "one",
                        "type": "text",
                        "value": "one",
                      },
                    ],
                    "type": "paragraph",
                    "value": "one",
                  },
                ],
                "type": "list-item",
              },
              {
                "checked": null,
                "count": "2",
                "raw": "2. two",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "two",
                    "tokens": [
                      {
                        "raw": "two",
                        "type": "text",
                        "value": "two",
                      },
                    ],
                    "type": "paragraph",
                    "value": "two",
                  },
                ],
                "type": "list-item",
              },
            ],
            "meta": {
              "checklist": false,
              "identifier": null,
              "ordered": true,
            },
            "raw": "1. one
2. two",
            "type": "list",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- one
- two
1. one
2. two",
    "type": "list",
  },
  {
    "indent": 0,
    "items": [
      {
        "checked": false,
        "count": null,
        "raw": "- [ ] c empty",
        "tokens": [
          {
            "indent": 0,
            "raw": "c empty",
            "tokens": [
              {
                "raw": "c empty",
                "type": "text",
                "value": "c empty",
              },
            ],
            "type": "paragraph",
            "value": "c empty",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": true,
        "count": null,
        "raw": "- [x] c checked
1. [ ] c empty
1. [x] c checked",
        "tokens": [
          {
            "indent": 0,
            "raw": "c checked",
            "tokens": [
              {
                "raw": "c checked",
                "type": "text",
                "value": "c checked",
              },
            ],
            "type": "paragraph",
            "value": "c checked",
          },
          {
            "indent": 0,
            "items": [
              {
                "checked": false,
                "count": "1",
                "raw": "1. [ ] c empty",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "c empty",
                    "tokens": [
                      {
                        "raw": "c empty",
                        "type": "text",
                        "value": "c empty",
                      },
                    ],
                    "type": "paragraph",
                    "value": "c empty",
                  },
                ],
                "type": "list-item",
              },
              {
                "checked": true,
                "count": "1",
                "raw": "1. [x] c checked",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "c checked",
                    "tokens": [
                      {
                        "raw": "c checked",
                        "type": "text",
                        "value": "c checked",
                      },
                    ],
                    "type": "paragraph",
                    "value": "c checked",
                  },
                ],
                "type": "list-item",
              },
            ],
            "meta": {
              "checklist": true,
              "identifier": null,
              "ordered": true,
            },
            "raw": "1. [ ] c empty
1. [x] c checked",
            "type": "list",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": true,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- [ ] c empty
- [x] c checked
1. [ ] c empty
1. [x] c checked",
    "type": "list",
  },
]
`;

exports[`list should tokenize the nested list 1`] = `
[
  {
    "indent": 0,
    "items": [
      {
        "checked": null,
        "count": null,
        "raw": "- item **1**",
        "tokens": [
          {
            "indent": 0,
            "raw": "item **1**",
            "tokens": [
              {
                "raw": "item ",
                "type": "text",
                "value": "item ",
              },
              {
                "raw": "**1**",
                "tokens": [
                  {
                    "raw": "1",
                    "type": "text",
                    "value": "1",
                  },
                ],
                "type": "bold",
              },
            ],
            "type": "paragraph",
            "value": "item **1**",
          },
        ],
        "type": "list-item",
      },
      {
        "checked": null,
        "count": null,
        "raw": "- item [link](link-url)
    - item 3 \`code item\`
        - item 4
    - item 5 ~~strike~~",
        "tokens": [
          {
            "indent": 0,
            "raw": "item [link](link-url)",
            "tokens": [
              {
                "raw": "item ",
                "type": "text",
                "value": "item ",
              },
              {
                "raw": "[link](link-url)",
                "tokens": {
                  "href": "link-url",
                  "title": {
                    "raw": "link",
                    "tokens": [
                      {
                        "raw": "link",
                        "type": "text",
                        "value": "link",
                      },
                    ],
                  },
                  "tooltip": undefined,
                },
                "type": "link",
              },
            ],
            "type": "paragraph",
            "value": "item [link](link-url)",
          },
          {
            "indent": 4,
            "items": [
              {
                "checked": null,
                "count": null,
                "raw": "    - item 3 \`code item\`
        - item 4",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "item 3 \`code item\`",
                    "tokens": [
                      {
                        "raw": "item 3 ",
                        "type": "text",
                        "value": "item 3 ",
                      },
                      {
                        "raw": "\`code item\`",
                        "type": "code",
                        "value": "code item",
                      },
                    ],
                    "type": "paragraph",
                    "value": "item 3 \`code item\`",
                  },
                  {
                    "indent": 8,
                    "items": [
                      {
                        "checked": null,
                        "count": null,
                        "raw": "        - item 4",
                        "tokens": [
                          {
                            "indent": 0,
                            "raw": "item 4",
                            "tokens": [
                              {
                                "raw": "item 4",
                                "type": "text",
                                "value": "item 4",
                              },
                            ],
                            "type": "paragraph",
                            "value": "item 4",
                          },
                        ],
                        "type": "list-item",
                      },
                    ],
                    "meta": {
                      "checklist": false,
                      "identifier": "-",
                      "ordered": false,
                    },
                    "raw": "        - item 4",
                    "type": "list",
                  },
                ],
                "type": "list-item",
              },
              {
                "checked": null,
                "count": null,
                "raw": "    - item 5 ~~strike~~",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": "item 5 ~~strike~~",
                    "tokens": [
                      {
                        "raw": "item 5 ",
                        "type": "text",
                        "value": "item 5 ",
                      },
                      {
                        "raw": "~~strike~~",
                        "tokens": [
                          {
                            "raw": "strike",
                            "type": "text",
                            "value": "strike",
                          },
                        ],
                        "type": "strike-through",
                      },
                    ],
                    "type": "paragraph",
                    "value": "item 5 ~~strike~~",
                  },
                ],
                "type": "list-item",
              },
            ],
            "meta": {
              "checklist": false,
              "identifier": "-",
              "ordered": false,
            },
            "raw": "    - item 3 \`code item\`
        - item 4
    - item 5 ~~strike~~",
            "type": "list",
          },
        ],
        "type": "list-item",
      },
    ],
    "meta": {
      "checklist": false,
      "identifier": "-",
      "ordered": false,
    },
    "raw": "- item **1**
- item [link](link-url)
    - item 3 \`code item\`
        - item 4
    - item 5 ~~strike~~",
    "type": "list",
  },
]
`;
